# meetshort

./: .env  README.md  audio_to_text.py  keynote.py  main.py  pyproject.toml  requirements.txt  summarizer.py  video_to_text.py
static/output/: keynotes.txt  summary.txt  transcript.txt
templates/: audiotranscript.html  audioupload.html  index.html  videoupload.html
